Added .cpp files for each game option and their headers. Created friendmode. (Friendmode has an issue with choosing a square when using multiple numbers)

--- a/TicTacToe(cmdconsole)/TicTacToe(cmdconsole).vcxproj
+++ b/TicTacToe(cmdconsole)/TicTacToe(cmdconsole).vcxproj
@@ -123,10 +123,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ComputerMode.cpp" />
+    <ClCompile Include="FriendMode.cpp" />
+    <ClCompile Include="InputFunctions.cpp" />
     <ClCompile Include="MainGame.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="TheBoard.cpp" />
     <ClCompile Include="TheBoard_H.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ComputerMode_H.h" />
+    <ClInclude Include="FriendMode_H.h" />
+    <ClInclude Include="GameModeEnum_H.h" />
     <ClInclude Include="InputFunctions_H.h" />
     <ClInclude Include="MainMenu_H.h" />
   </ItemGroup>
