--- a/TicTacToe(cmdconsole)/TicTacToe(cmdconsole).vcxproj
+++ b/TicTacToe(cmdconsole)/TicTacToe(cmdconsole).vcxproj
@@ -130,6 +130,9 @@
     <ClInclude Include="InputFunctions_H.h" />
     <ClInclude Include="MainMenu_H.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="LICENSE.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
